[package]
name = "db_meter"
version = "0.1.0"
edition = "2021"
authors = ["Christof Lanzlinger <laenzlinger@github.com>"]
license = "ISC" 

description = "A loudness measurment plugin"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git ="https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }

parking_lot = "0.12"


[workspace]
members = ["xtask"]
